--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,12 +1,22 @@
-body {
+html,body {
+    background: linear-gradient(23deg, rgb(202, 202, 202) 0%, rgb(255, 255, 255) 55%, rgba(255,255,255,0) 100%);
+    height: 100%;
 
-    background-color: rgb(255, 255, 255);
+    font: small-caps;
 }
+
+.container{
+    margin-top: 10px;
+    
+}
+
+
+/* responsive */
 
 @media screen and (min-width: 800px) {
     .bg-light{
-        background-color: rgb(192, 190, 190) !important;
+        background-color: rgba(255, 255, 255, 0.034) !important;
         height: 150px;
-   
+        box-shadow: -1px -1px 4px 0 rgb(29 29 29 / 25%) 
    }
   }
